--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "leaflet": "^1.3.4",
     "nyc-subway-icons": "git+https://github.com/louh/nyc-subway-icons.git",
