--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
   "dependencies": {
     "leaflet": "^1.3.4",
     "nyc-subway-icons": "git+https://github.com/louh/nyc-subway-icons.git",
-    "parcel-bundler": "^1.10.3"
+    "parcel-bundler": "^1.10.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "gh-pages": "^2.0.1"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ]
   }
 }
