--- a/package.json
+++ b/package.json
@@ -23,6 +23,15 @@
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "eslint": "5.7.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-config-standard-react": "7.0.2",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-standard": "4.0.0",
     "gh-pages": "2.0.1"
   },
   "babel": {
@@ -33,5 +42,32 @@
     "plugins": [
       "@babel/plugin-proposal-class-properties"
     ]
+  },
+  "eslint": {
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "env": {
+      "browser": true,
+      "es6": true
+    },
+    "plugins": [
+      "react"
+    ],
+    "extends": [
+      "standard",
+      "standard-react"
+    ],
+    "rules": {
+      "jsx-quotes": [
+        "error",
+        "prefer-double"
+      ]
+    }
   }
 }
