--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
   "license": "MIT",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/preset-env": "7.1.0",
+    "@babel/preset-env": "7.1.5",
     "@babel/preset-react": "7.0.0",
     "leaflet": "1.3.4",
     "nyc-subway-icons": "git+https://github.com/louh/nyc-subway-icons.git",
     "parcel-bundler": "1.10.3",
-    "react": "16.5.2",
-    "react-dom": "16.5.2"
+    "react": "16.6.1",
+    "react-dom": "16.6.1",
+    "react-router-dom": "4.3.1"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "eslint": "5.7.0",
+    "eslint": "5.8.0",
     "eslint-config-standard": "12.0.0",
     "eslint-config-standard-react": "7.0.2",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-node": "8.0.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-standard": "4.0.0",
