Remove gh-pages deploy.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html",
-    "predeploy": "parcel build index.html --public-url /weekender",
-    "deploy": "gh-pages -d dist"
+    "start": "parcel index.html"
   },
   "author": "",
   "license": "MIT",
@@ -32,8 +30,7 @@
     "eslint-plugin-node": "8.0.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-standard": "4.0.0",
-    "gh-pages": "2.0.1"
+    "eslint-plugin-standard": "4.0.0"
   },
   "babel": {
     "presets": [
