--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf ./.cache && rm -rf ./dist && mkdir dist && touch ./dist/.gitkeep",
     "test": "echo \"Error: no test specified\" && exit 1",
     "copy-images": "cp -R ./tiles ./dist/ && cp -R ./test/fixtures ./dist/",
     "start": "npm run copy-images && parcel src/index.html",
