--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/preset-env": "7.1.5",
     "@babel/preset-react": "7.0.0",
+    "downshift": "3.1.5",
     "leaflet": "1.3.4",
     "nyc-subway-icons": "git+https://github.com/louh/nyc-subway-icons.git",
     "parcel-bundler": "1.10.3",
