--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "repository": "https://github.com/louh/weekender",
   "scripts": {
     "clean": "rm -rf ./.cache && rm -rf ./dist && mkdir dist && touch ./dist/.gitkeep",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,21 +15,21 @@
   "license": "MIT",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/preset-env": "7.1.5",
+    "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
     "downshift": "3.1.5",
     "leaflet": "1.3.4",
     "nyc-subway-icons": "git+https://github.com/louh/nyc-subway-icons.git",
     "parcel-bundler": "1.10.3",
-    "react": "16.6.1",
-    "react-dom": "16.6.1",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
     "react-router-dom": "4.3.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "eslint": "5.8.0",
+    "eslint": "5.9.0",
     "eslint-config-standard": "12.0.0",
     "eslint-config-standard-react": "7.0.2",
     "eslint-plugin-import": "2.14.0",
