--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "7.0.0",
     "downshift": "3.1.5",
     "leaflet": "1.3.4",
+    "leaflet-rastercoords": "1.0.3",
     "nyc-subway-icons": "git+https://github.com/louh/nyc-subway-icons.git",
     "parcel-bundler": "1.10.3",
     "react": "16.6.3",
