--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "parcel-bundler": "1.10.3",
     "react": "16.6.3",
     "react-dom": "16.6.3",
-    "react-router-dom": "4.3.1"
+    "react-router-dom": "4.3.1",
+    "sanitize-html": "1.19.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "7.2.0",
