--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@testing-library/react": "8.0.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.2",
     "eslint": "5.16.0",
@@ -40,8 +41,7 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-standard": "4.0.0",
     "jest": "24.8.0",
-    "react-test-renderer": "16.8.6",
-    "react-testing-library": "8.0.1"
+    "react-test-renderer": "16.8.6"
   },
   "babel": {
     "presets": [
