style: fix eslint errors w/ standard@13

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "copy-images": "cp -R ./tiles ./dist/ && cp -R ./test/fixtures ./dist/ && cp ./src/images/thumbnail.png ./dist/",
     "start": "npm run copy-images && parcel src/index.html --no-source-maps",
-    "build": "npm run copy-images && parcel build src/index.html --no-source-maps"
+    "build": "npm run copy-images && parcel build src/index.html --no-source-maps",
+    "lint": "eslint \"src/**/*.js\" \"src/**/*.jsx\" \"test/**/*.js\""
   },
   "author": "",
   "license": "MIT",
